--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domain Gen</title>
 </head>
-<h1 class="domainhere">domain here</h1>
-<button onclick="domain()">Click for domain gen</button>
+<h1>domain here</h1>
 
+<button onclick="array()">Click for domain gen</button>
+<div class= "domainhere"></div>
 <script src="app.js"></script>
 
 
